--- a/style.css
+++ b/style.css
@@ -10,7 +10,36 @@ body{
     font-weight: 400;
     font-family: Arial, Helvetica, sans-serif;
     height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 h1{
     color:  hsl(150, 30%, 20%);
+}
+.container{
+    border: 1px solid gray;
+    border-radius: 5px;
+    padding: 1rem 4rem;
+    box-shadow: 1px 1px 5px 1px hsl(0, 0%, 0% , 0.3);
+    text-align: center;
+    display: grid;
+    row-gap: 1rem;
+}
+h1::selection{
+    background: black;
+}
+button{
+    outline: none;
+    border: none;
+    padding: 0.5rem 1rem;
+    border-radius: 5px;
+    background-color: hsl(150, 30%, 20%);
+    color: white;
+    cursor: pointer;
+    transition: 0.3s;
+    user-select: none;
+}
+button:hover{
+    transform: scale(1.04);
 }
