--- a/style.css
+++ b/style.css
@@ -10,15 +10,40 @@ body{
     font-weight: 400;
     font-family: Arial, Helvetica, sans-serif;
     height: 100vh;
+}
+a{
+    text-decoration: none;
+}
+
+nav{
+    margin-bottom: 5rem;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
+    padding: 1rem 3rem;
+    height: 5rem;
+    box-shadow: 1px 1px 1px 1px hsl(0, 0%, 0%, 0.3);
+}
+.logo{
+    color: white;
+}
+ul{
+    display: flex;
+    align-items: center;
+    column-gap: 1rem;
+    list-style: none;
+}
+ul a {
+    color:  hsl(150, 30%, 20%);
 }
 h1{
     color:  hsl(150, 30%, 20%);
 }
 .container{
     border: 1px solid gray;
+    width: 50%;
+    max-width: 50%;
+    margin: 0 auto;
     border-radius: 5px;
     padding: 1rem 4rem;
     box-shadow: 1px 1px 5px 1px hsl(0, 0%, 0% , 0.3);
