--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ nav{
     box-shadow: 1px 1px 1px 1px hsl(0, 0%, 0%, 0.3);
 }
 .logo{
-    color: white;
+    color: hsl(150, 30%, 20%);
 }
 ul{
     display: flex;
@@ -59,8 +59,9 @@ button{
     border: none;
     padding: 0.5rem 1rem;
     border-radius: 5px;
-    background-color: hsl(150, 30%, 20%);
-    color: white;
+    background-color: hsl(55, 60%, 70%);
+    border: 2px solid red;
+    color: hsl(150, 30%, 20%);
     cursor: pointer;
     transition: 0.3s;
     user-select: none;
